--- a/index.html
+++ b/index.html
@@ -3,11 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Simple Form</title>
 </head>
 <body>
-    
-
+    <h2>Введите свои данные</h2>
+    <form action="http://localhost:3000" method="post">
+        <div>
+            <label for="firstName">Имя:</label>
+            <input type="text" id="firstName" name="firstName">
+        </div>
+        <div>
+            <label for="lastName">Фамилия:</label>
+            <input type="text" id="lastName" name="lastName">
+        </div>
+        <div>
+            <button type="submit">Отправить</button>
+        </div>
+    </form>
 
     <script src="index.js"></script>
 </body>
